welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:24: error: not found: value draw5Flowers
draw5Flowers();
^